<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Creative Teach</string>
    <string name="app_id">450629508434146</string>
    <string name="title_activity_main">Creative Teach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_favorite">Favorite</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Not a member? Sign up</string>
    <string name="hello_world">Hello world!</string>
    <string name="fb_signin">Sign in with Facebook</string>

    <string name="btn_skip_intro">Skip</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string-array name="sections">
        <item>Announcements</item>
        <item>Strategies</item>
        <item>Videos</item>
        <item>More</item>
        <item>Favorites</item>
        <item>Arts Partners</item>
        <item>Share</item>
        <item>Preferences</item>
        <item>Help</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="sections_icons">
        <item>@android:drawable/ic_menu_today</item>
        <item>@android:drawable/ic_btn_speak_now</item>
        <item>@android:drawable/ic_menu_camera</item>
        <item>@android:drawable/ic_menu_more</item>
        <item>@android:drawable/btn_star</item>
        <item>@android:drawable/ic_menu_slideshow</item>
        <item>@android:drawable/ic_menu_send</item>
        <item>@android:drawable/ic_menu_preferences</item>
        <item>@android:drawable/ic_menu_help</item>
        <item>@android:drawable/ic_lock_power_off</item>
    </string-array>
    <string-array name="grades_array">
        <item>@string/grade1</item>
        <item>@string/grade2</item>
        <item>@string/grade3</item>
        <item>@string/grade4</item>
        <item>@string/grade5</item>
    </string-array>

    <string name="grade1">Early Childhood</string>
    <string name="grade2">Lower Elementary</string>
    <string name="grade3">Upper Elementary</string>
    <string name="grade4">Middle School</string>
    <string name="grade5">High School</string>


    <string name="subject_prompt">Choose a subject</string>
    <string name="sub_prefs_prompt">Choose subject interests</string>
    <string name="grade_prompt">Choose a grade level</string>
    <string name="type_prompt">Choose a type</string>

    <string-array name="subjects_array">
        <item>@string/sub1</item>
        <item>@string/sub2</item>
        <item>@string/sub3</item>
        <item>@string/sub4</item>
        <item>@string/sub5</item>
        <item>@string/sub6</item>
        <item>@string/sub7</item>
        <item>@string/sub8</item>
        <item>@string/sub9</item>
        <item>@string/sub10</item>
        <item>@string/sub11</item>
    </string-array>

    <string name="sub1">Bilingual</string>
    <string name="sub2">Digital Media</string>
    <string name="sub3">Drama</string>
    <string name="sub4">ELA</string>
    <string name="sub5">History</string>
    <string name="sub6">Math</string>
    <string name="sub7">Movement</string>
    <string name="sub8">Music</string>
    <string name="sub9">Science</string>
    <string name="sub10">SEL</string>
    <string name="sub11">Visual Art</string>


    <string-array name="type_array">
        <item>Strategy</item>
        <item>Video</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="resource_name">Resource Name</string>
    <string name="url">URL</string>

</resources>